# glam-rs

codegen/: Cargo.toml
codegen/src/: main.rs
codegen/templates/swizzles/: traits.rs
