[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false }
clap = { version = "3", default-features = false, features = ["std"] }
const_format = { version = "0.2", default-features = false }
git2 = { version = "0.14", default-features = false }
tera = { version = "1", default-features = false }
